# graphgenerator

./: .gitignore  Dockerfile  README.md  launch.sh  pyproject.toml  train.sbatch
deepgraphgen/: datageneration.py  datasets_diffusion.py  datasets_spectre.py  datasets_torch.py  diffusion.py  diffusion_generation.py  graphGDP.py  graphGRAN.py  graphRNN.py  graphgan.py  graphvae.py  pl_trainer.py  pl_trainer_g2pt.py  pl_trainer_g2pt_auto.py  pl_trainer_g2pt_llada.py  pl_trainer_g2pt_llada_pp.py  pl_trainer_score_entropy_discrete_diffusion.py  utils.py
scripts_training/: README.md  full_train.sh  model.ckpt  plot_graph.py  retrieve_datasets.py  test_SEDD.py  test_diffusion_model.py  test_g2pt.py  test_g2pt_auto.py  test_g2pt_llada.py  test_g2pt_llada_pp.py  test_mixture.py  test_model.py  train_diffusion.py  train_erdos.py
tests/: test_GRAN.py  test_datagenerator.py  test_datasets.py  test_datasets_diffusion.py  test_diffusion_generation.py  test_graphgan.py  test_graphvae.py  test_layers.py
