[tool.poetry]
name = "deepgraphgen"
version = "0.1.0"
description = "tools to test graph generation"
authors = ["Adrien Bufort"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"
networkx = "^3.1"
torch = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
